[gd_scene load_steps=3 format=3 uid="uid://b8yv3h5j7n2kx"]

[ext_resource type="Script" path="res://pages/settings/ai_management/APIEditDialog.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.705882)

[node name="APIEditDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "编辑 API 配置"
horizontal_alignment = 1

[node name="ProviderInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "提供商名称 (如: OpenAI, DeepSeek)"

[node name="KeyInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "API Key"
secret = true

[node name="URLInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "自定义 Base URL (可选)"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="CancelBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "取消"

[node name="SaveBtn" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "保存"
